src/snapshots/rontodoc__components__tests__snapshots__snapshot_section_header_with_count.snap
---
source: src/components.rs
assertion_line: 596
expression: html
---
<div class="section-header">
    <h2 class="section-title">
        Classes
        <span class="section-count">5</span>
    </h2>
    <p class="section-description">All classes defined in this ontology.</p>
</div>
<style>
    .section-header {
        margin-bottom: var(--space-6);
        padding-top: var(--space-8);
    }

    .section-header:first-child {
        padding-top: 0;
    }

    .section-title {
        display: flex;
        align-items: center;
        gap: var(--space-3);
        font-size: var(--text-2xl);
        font-weight: 600;
        color: var(--color-text);
        margin: 0 0 var(--space-2) 0;
    }

    .section-count {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        min-width: 1.75rem;
        height: 1.75rem;
        padding: 0 var(--space-2);
        font-size: var(--text-sm);
        font-weight: 500;
        color: var(--color-text-muted);
        background-color: var(--color-bg-secondary);
        border-radius: 9999px;
    }

    .section-description {
        margin: 0;
        font-size: var(--text-base);
        color: var(--color-text-muted);
        max-width: 65ch;
    }
</style>
