src/snapshots/rontodoc__components__tests__snapshots__snapshot_sidebar_empty.snap
---
source: src/components.rs
assertion_line: 491
expression: html
---
<nav class="sidebar-section">
    <h2 class="sidebar-title">Navigation</h2>
    <ul class="sidebar-nav">
        <li><a href="#overview" class="sidebar-link active">Overview</a></li>
        <li><a href="#namespaces" class="sidebar-link">Namespaces</a></li>
    </ul>
</nav>
<style>
    .sidebar-section {
        margin-bottom: var(--space-6);
    }

    .sidebar-title {
        display: flex;
        align-items: center;
        gap: var(--space-2);
        font-size: var(--text-xs);
        font-weight: 600;
        text-transform: uppercase;
        letter-spacing: 0.05em;
        color: var(--color-text-muted);
        margin: 0 0 var(--space-2) 0;
        padding: 0 var(--space-2);
    }

    .sidebar-title .badge {
        font-size: var(--text-xs);
        font-weight: 500;
        background-color: var(--color-bg-tertiary);
        color: var(--color-text-muted);
        padding: 0 var(--space-2);
        border-radius: 9999px;
        text-transform: none;
        letter-spacing: normal;
    }

    .sidebar-nav {
        list-style: none;
        margin: 0;
        padding: 0;
    }

    .sidebar-nav li {
        margin: 0;
    }

    .sidebar-link {
        display: block;
        padding: var(--space-2);
        font-size: var(--text-sm);
        color: var(--color-text);
        border-radius: var(--radius-md);
        transition: background-color var(--transition-fast), color var(--transition-fast);
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .sidebar-link:hover {
        background-color: var(--color-bg-tertiary);
        text-decoration: none;
    }

    .sidebar-link.active {
        background-color: var(--color-primary);
        color: var(--color-text-inverse);
    }
</style>
